
2007-11-04  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src/xvidcap-dbus-client.c, src/main.c, 
		po: en.po, de.po, POTFILES.in:
		updated i18n
	* doc/man: C/xvidcap-dbus-client.1.xml, 
		C/xvidcap-dbus-client.1, 
		C/xvidcap-dbus-client.1.xml.pot, 
		C/Makefile.am, C/xvidcap.1.xml, C/xvidcap.1, 
		C/xvidcap.1.xml.pot, de/xvidcap.1-de.po, 
		de/xvidcap-dbus-client.1.xml, 
		de/xvidcap-dbus-client.1, 
		de/xvidcap-dbus-client.1-de.po, 
		de/Makefile.am, de/xvidcap.1.xml, 
		de/xvidcap.1: added xvidcap-dbus-client
		manpage and updated xvidcap manpage
		for 1.1.7

2007-11-02  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src: gnome_ui.c, capture.c, job.c, Makefile.am: 
		fix --continue with --time and one
		condition where starting recording with
		current frame == max frame would cause
		a crash

2007-10-29  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src: dbus-server-object.c, dbus-server-object.h,
		xvidcap-dbus-client.c: added doxygen
		comments

2007-10-25  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* configure.in, Makefile.am, src: 
		dbus-server-object.c, xvidcap-dbus.xml,
		dbus-server-object.h, gnome_ui.c,
		xvidcap-dbus-client.c, Makefile.am:
		make dbus activation work (make sure
		you can write your video file)
	* src: xtoffmpeg.c, capture.c, job.c: code
		cleanup and additional debug output
	* depcomp, INSTALL, COPYING, missing, aclocal.m4,
		install-sh: new autotools version
	* doc/xvidcap/de/figures/xvidcap-warning.png:
		added image to svn

2007-10-24  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src: dbus-server-object.c, xvidcap-dbus.xml,
		dbus-server-object.h, xvidcap-dbus-client.c:
		added start, stop, pause remote functions
		to dbus server.
	* src: xvidcap-dbus-client.c, Makefile.am:
		integrate xvidcap-dbus-client in normal
		build

2007-10-23  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* net.jarre_de_the.Xvidcap.service.in, Makefile.am,
		src: dbus-server-object.c, 
		dbus-server-object.h, Makefile.am, 
		xvidcap-infos.xml: prototype for