@@ -1,4 +1,10 @@
 
+2007-11-06  Karl H. Beckers  <karl.h.beckers@gmx.net>
+	* po/en.po, po/de.po, src: gnome_ui.c, capture.c, 
+		job.c, job.h: Added error msg popup
+		when error occurs writing captured
+		data to file
+
 2007-11-04  Karl H. Beckers  <karl.h.beckers@gmx.net>
 	* src/xvidcap-dbus-client.c, src/main.c, 
 		po: en.po, de.po, POTFILES.in:
